--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="./Free-Wooden-Logo-Mockup-jpg.jpg" alt="">
+            <img class="img-fluid" src="./12.jpg" alt="">
           </div>
         </div>
 
@@ -573,7 +573,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="./Free-Wooden-Logo-Mockup-jpg.jpg" alt="">
+                <img class="img-fluid rounded mb-5" src="./12.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
