--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
             <br>
             <div id="success"></div>
             <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
+              <button type="submit" class="btn bg-purple btn-xl" id="sendMessageButton">Send</button>
             </div>
           </form>
         </div>
