Completed the modals.

--- a/index.html
+++ b/index.html
@@ -395,6 +395,7 @@
                 </div>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="./1.jpg" alt="">
+                <p class="mb-5">Be a brand above with these logos.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -513,8 +514,9 @@
                 </div>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="./16.jpg" alt="">
-                                <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">T-shirt designing , logo designing ,Photoshop</p>
+                <!-- Portfolio Modal - Text -->
+                <p class="mb-5">T-shirt designing , logo designing ,Photoshop <br>
+                  Communicating through design.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -633,6 +635,7 @@
                 </div>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="./3.jpg" alt="">
+                <p class="mb-5">Logos to give a new face to your company.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -670,6 +673,7 @@
                 </div>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="./LOGO 2.jpg" alt="">
+                <p class="mb-5">Creating innovative logos for your brands is my passion.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -708,6 +712,7 @@
                 </div>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="./12.jpg" alt="">
+                <p class="mb-5">Wooden logo Mockup to make your service a brand.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
