Adding info in about part.

--- a/index.html
+++ b/index.html
@@ -263,9 +263,13 @@
           <p class="lead"></p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">I can serve you with Photoshop and Vector Illustration </p>
+          <h3>Skills:</h3>
+          <p class="lead">
+            Graphic Designing, Photoshop, Illustration, Vector Illustration, Branding, Infographics, Brochure and Flyer Design, T-shirt designing, Logo Designing, Banner Designing, Social Media Advertising, Indesign.  
+          </p>
         </div>
       </div>
+     <h4 class="text-center"> “The real issue is not talent as an independent element, but talent in relationship to will, desire and persistence.” —Milton Glaser </h4>
     </div>
   </section>
 
