Adding info in about part.

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead"></p>
+          <p class=" mt-3 lead">Currently I'm a Graphics Designer, who works on many variegated projects.</p>
         </div>
         <div class="col-lg-4 mr-auto">
           <h3>Skills:</h3>
@@ -269,7 +269,7 @@
           </p>
         </div>
       </div>
-     <h4 class="text-center"> “The real issue is not talent as an independent element, but talent in relationship to will, desire and persistence.” —Milton Glaser </h4>
+     <h4 class="text-center mt-3"> “The real issue is not talent as an independent element, but talent in relationship to will, desire and persistence.” —Milton Glaser </h4>
     </div>
   </section>
 
