--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class=" mt-3 lead">Currently I'm a Graphics Designer, who works on many variegated projects.</p>
+          <p class=" mt-3 lead">Currently I'm a Graphics Designer, who works on variegated projects.I create visual content to communicate messages.I have more than 3 years Experience and I have worked for he firms like E-bazaar.pk and sixthgalleria.</p>
         </div>
         <div class="col-lg-4 mr-auto">
           <h3>Skills:</h3>
@@ -346,7 +346,7 @@
         <!-- Footer Social Icons -->
         <div class="align mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Around the Web</h4>
-          <a class="btn btn-outline-light btn-social mx-1" href="#">
+          <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://www.facebook.com/Raza-Graphics-217152305747916/?modal=admin_todo_tour0">
             <i class="fab fa-fw fa-facebook-f"></i>
           </a>
           <a class="btn btn-outline-light btn-social mx-1" href="#">
